2025-08-05T01:43:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16738375277 # 726
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-05
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1052 1532 / 1065 1545
* notice: next accum: outdated-unq outdated-all / unq all: 1053 1533 / 1066 1546
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-22] / [2025-08-04]

2025-08-04T01:48:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16712076447 # 725
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-04
* notice: last 14d: unq all: 3 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1052 1532 / 1064 1544
* notice: next accum: outdated-unq outdated-all / unq all: 1052 1532 / 1065 1545
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-08-03]

2025-08-03T01:48:23Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/16699878506 # 724
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2025-08-03
* notice: last 14d: unq all: 3 12
* notice: prev accum: outdated-unq outdated-all / unq all: 1051 1531 / 1063 1543
* notice: next accum: outdated-unq outdated-all / unq all: 1052 1532 / 1064 1544
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-07-20] / [2025-08-02]

2025-08-02T01:27:28Z: