@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-08-05T01:43:23Z",
-  "count_outdated" : 1533,
-  "uniques_outdated" : 1053,
-  "count" : 1546,
-  "uniques" : 1066,
+  "timestamp" : "2025-08-06T01:42:01Z",
+  "count_outdated" : 1534,
+  "uniques_outdated" : 1054,
+  "count" : 1547,
+  "uniques" : 1067,
   "clones" : [
-    {
-      "timestamp": "2025-07-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-07-24T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-08-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-08-05T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
